--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/aws-lambda": "^8.10.131",
     "aws-lambda": "^1.0.7",
     "typescript": "^5.3.3"
   },
