--- a/src/package.json
+++ b/src/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.11",
     "chai": "^4.3.6",
     "mocha": "^10.1.0"
   }
