--- a/src/package.json
+++ b/src/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.6",
     "chai": "^4.3.6",
     "mocha": "^10.1.0"
   }
