`yarn add -D eslint`

--- a/src/package.json
+++ b/src/package.json
@@ -24,6 +24,7 @@
     "@types/chai": "^4.3.11",
     "@types/mocha": "^10.0.6",
     "chai": "^4.3.6",
+    "eslint": "^8.56.0",
     "mocha": "^10.1.0"
   }
 }
