--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,8 @@
   "scripts": {
     "build": "tsc",
     "test": "mocha ./tests/unit/",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
