--- a/src/package.json
+++ b/src/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "@types/aws-lambda": "^8.10.131",
     "aws-lambda": "^1.0.7",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/chai": "^4.3.11",
