--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@types/aws-lambda": "^8.10.131",
+    "@types/uuid": "^9.0.7",
     "aws-lambda": "^1.0.7",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1"
