--- a/src/package.json
+++ b/src/package.json
@@ -21,6 +21,7 @@
     "@types/aws-lambda": "^8.10.131",
     "@types/uuid": "^9.0.7",
     "aws-lambda": "^1.0.7",
+    "esbuild": "^0.19.11",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1"
   },
