--- a/src/package.json
+++ b/src/package.json
@@ -11,7 +11,7 @@
     "yarn": ">=1.22.0"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "esbuild ./app.ts --bundle --platform=node --target=node18 --outfile=./app.js",
     "test": "mocha ./tests/unit/",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
