`sam validate`をCIに組み込む。

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ env:
   source-directory: ./src/
 
 jobs:
-  ci:
+  node-ci:
     defaults:
       run:
         working-directory: ${{ env.source-directory }}
@@ -15,22 +15,30 @@ jobs:
       matrix:
         node-version: [18]
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Cache node_modules
-      id: node_modules_cache_id
-      uses: actions/cache@v3
-      with:
-        path: ${{ env.source-directory }}node_modules
-        key: node-modules-${{ matrix.node-version }}-${{ hashFiles('./**/yarn.lock') }}
-    - name: Install dependencies
-      if: steps.node_modules_cache_id.outputs.cache-hit != 'true'
-      run: yarn install --frozen-lockfile --non-interactive
-    - name: Lint
-      run: yarn lint
-    - name: Type check
-      run: yarn type-check
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Cache node_modules
+        id: node_modules_cache_id
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.source-directory }}node_modules
+          key: node-modules-${{ matrix.node-version }}-${{ hashFiles('./**/yarn.lock') }}
+      - name: Install dependencies
+        if: steps.node_modules_cache_id.outputs.cache-hit != 'true'
+        run: yarn install --frozen-lockfile --non-interactive
+      - name: Lint
+        run: yarn lint
+      - name: Type check
+        run: yarn type-check
+  sam-ci:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+      - uses: aws-actions/setup-sam@v2
+      - name: Validate SAM template
+        run: sam validate
