--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,3 +42,14 @@ jobs:
       - uses: aws-actions/setup-sam@v2
       - name: Validate SAM template
         run: sam validate
+  intg-ci:
+    runs-on: ubuntu-22.04
+    needs:
+      - node-ci
+      - sam-ci
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+      - uses: aws-actions/setup-sam@v2
+      - name: Test integration
+        run: sam build --use-container && sam local invoke --no-event
