--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,8 @@ jobs:
         run: yarn lint
       - name: Type check
         run: yarn type-check
+      - name: Build
+        run: yarn build:test
       - name: Test
         run: yarn test
   sam-ci:
